fix: align-contents for flex-wrap

--- a/style.css
+++ b/style.css
@@ -47,6 +47,8 @@ h1, h2, h3, h4, h5, h6
     justify-content: space-between;
     align-items: stretch;
     flex-wrap: wrap;
+    align-content: space-between;
+    gap: 10px;
     /* border: 3px blue dotted; */
 }
 
